fix: remove z-index
it was introduced because of a conflict with select now removed

--- a/packages/circuit-ui/components/AutocompleteInput/components/ComboboxInput/ComboboxInput.module.css
+++ b/packages/circuit-ui/components/AutocompleteInput/components/ComboboxInput/ComboboxInput.module.css
@@ -16,7 +16,6 @@
   position: absolute;
   top: 50%;
   left: 0;
-  z-index: calc(var(--cui-z-index-input) + 1);
   display: flex;
   align-items: center;
   justify-content: center;
